chore: initial project setup with config files and entry points

--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "1.0.0",
   "description": "backend for my planocean project",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "author": "Aquib Jawed",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.1",
+    "zod": "^3.25.61"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
+  }
 }
