--- a/.env.examples
+++ b/.env.examples
@@ -18,9 +18,10 @@ DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/dbname
 # JWT / Token Secrets
 # -----------------------
 ACCESS_TOKEN_SECRET=your-super-secret-access-token
+ACCESS_TOKEN_EXPIRY=1m
+
 REFRESH_TOKEN_SECRET=your-super-secret-refresh-token
-ACCESS_TOKEN_EXPIRES_IN=1m
-REFRESH_TOKEN_EXPIRES_IN=1d
+REFRESH_TOKEN_EXPIRY=1d
 
 # -----------------------
 # Mailtrap (or SMTP) Config
