--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "Aquib Jawed",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -19,6 +21,7 @@
     "zod": "^3.25.61"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
 }
