--- a/.env.examples
+++ b/.env.examples
@@ -12,7 +12,7 @@ FRONTEND_URL=https://your-frontend-domain.com
 # -----------------------
 # Database Configuration
 # -----------------------
-DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/dbname
+DATABASE_URL=your-database-url
 
 # -----------------------
 # JWT / Token Secrets
