--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.29",
     "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3",
+    "resend": "^4.6.0",
     "zod": "^3.25.61"
   },
   "devDependencies": {
